--- a/roots/www/root/index.html
+++ b/roots/www/root/index.html
@@ -7,13 +7,23 @@
           <div id="about-me">
             <h2>About Me</h2>
             <ul>
-              <li>I'm currently hacking on a <a href="http://venz.io">3d multiplayer game</a> for the browser</li>
+              <li>I'm currently working full time at Facebook as a Software Engineer on iOS Product Infrastructure</li>
+              <li>Before FB, I was hacking on a <a href="http://venz.io">3d multiplayer game</a> for the browser</li>
               <li>I studied Software Engineering at the University of Waterloo for ~4 years, did not complete my degree, and do not intend on doing so</li>
               <li>I've lived (and worked) in San Diego CA, Mountain View CA, Seattle WA, New York NY, Waterloo ON, and London ON</li>
             </ul>
           </div>
           <div id="work-experience">
             <h2>Work Experience</h2>
+            <p>I'm currently working full time at Facebook</p>
+            <ul>
+              <li>
+                <span class="company"><a href="http://www.facebook.com/raz">Facebook</a></span>
+                <span class="location">Menlo Park, CA</span>
+                <span class="dates">Oct 2013 to present</span>
+                <span class="role">iOS Product Infrastructure</span>
+              </li>
+            </ul>
             <p>I've had seven software engineering internships</p>
             <ul>
               <li>
