--- a/roots/www/root/index.html
+++ b/roots/www/root/index.html
@@ -1,14 +1,8 @@
-        <div id="top">
-          <h1>Andrew Rasmussen</h1>
-          <a href="mailto:andrew@venz.io">andrew@venz.io</a>
-          <a href="/resume">resume</a>
-        </div>
-        <div id="bottom">
           <div id="about-me">
             <h2>About Me</h2>
             <ul>
               <li>I'm currently working full time at Facebook as a Software Engineer on iOS Product Infrastructure</li>
-              <li>Before FB, I was hacking on a <a href="http://venz.io">3d multiplayer game</a> for the browser</li>
+              <li>Before FB, I was hacking on a <a target="_blank" href="http://venz.io">3d multiplayer game</a> for the browser</li>
               <li>I studied Software Engineering at the University of Waterloo for ~4 years, did not complete my degree, and do not intend on doing so</li>
               <li>I've lived (and worked) in San Diego CA, Mountain View CA, Seattle WA, New York NY, Waterloo ON, and London ON</li>
             </ul>
@@ -18,7 +12,7 @@
             <p>I'm currently working full time at Facebook</p>
             <ul>
               <li>
-                <span class="company"><a href="http://www.facebook.com/raz">Facebook</a></span>
+                <span class="company"><a target="_blank" href="http://www.facebook.com/raz">Facebook</a></span>
                 <span class="location">Menlo Park, CA</span>
                 <span class="dates">Oct 2013 to present</span>
                 <span class="role">iOS Product Infrastructure</span>
@@ -27,43 +21,43 @@
             <p>I've had seven software engineering internships</p>
             <ul>
               <li>
-                <span class="company"><a href="http://www.facebook.com/raz">Facebook</a></span>
+                <span class="company"><a target="_blank" href="http://www.facebook.com/raz">Facebook</a></span>
                 <span class="location">Seattle, WA</span>
                 <span class="dates">Jan-Apr 2013</span>
                 <span class="role">iOS Mobile Core</span>
               </li>
               <li>
-                <span class="company"><a href="http://www.facebook.com/raz">Facebook</a></span>
+                <span class="company"><a target="_blank" href="http://www.facebook.com/raz">Facebook</a></span>
                 <span class="location">Menlo Park, CA</span>
                 <span class="dates">May-Aug 2012</span>
                 <span class="role">Core Photos</span>
               </li>
               <li>
-                <span class="company"><a href="http://www.digitalextremes.com">Digital Extremes</a></span>
+                <span class="company"><a target="_blank" href="http://www.digitalextremes.com">Digital Extremes</a></span>
                 <span class="location">London, ON</span>
                 <span class="dates">Sep-Dec 2011</span>
                 <span class="role">Star Trek Gameplay</span>
               </li>
               <li>
-                <span class="company"><a href="http://www.morganstanley.com">Morgan Stanley</a></span>
+                <span class="company"><a target="_blank" href="http://www.morganstanley.com">Morgan Stanley</a></span>
                 <span class="location">New York, NY</span>
                 <span class="dates">Jan-Apr 2011</span>
                 <span class="role">Electronic Trading Infrastructure</span>
               </li>
               <li>
-                <span class="company"><a href="http://www.qualcomm.com">Qualcomm</a></span>
+                <span class="company"><a target="_blank" href="http://www.qualcomm.com">Qualcomm</a></span>
                 <span class="location">San Diego, CA</span>
                 <span class="dates">May-Aug 2010</span>
                 <span class="role">QDSP6 Audio Test</span>
               </li>
               <li>
-                <span class="company"><a href="http://www.microsoft.com">Microsoft</a></span>
+                <span class="company"><a target="_blank" href="http://www.microsoft.com">Microsoft</a></span>
                 <span class="location">Redmond, WA</span>
                 <span class="dates">Jun-Aug 2009</span>
                 <span class="role">Globalization for Visual Studio 2010</span>
               </li>
               <li>
-                <span class="company"><a href="http://www.microsoft.com">Microsoft</a></span>
+                <span class="company"><a target="_blank" href="http://www.microsoft.com">Microsoft</a></span>
                 <span class="location">Redmond, WA</span>
                 <span class="dates">Jun-Aug 2008</span>
                 <span class="role">Windows Embedded for Point of Service</span>
@@ -72,7 +66,7 @@
             <p>I've also done some freelance work</p>
             <ul>
               <li>
-                <span class="company"><a href="http://tungstenproperty.com">Tungsten Property</a></span>
+                <span class="company"><a target="_blank" href="http://tungstenproperty.com">Tungsten Property</a></span>
                 <span class="location">Remote</span>
                 <span class="dates">Dec 2011 to present</span>
                 <span class="role">Web Developer</span>
@@ -83,24 +77,23 @@
             <h2>Stuff I've Built</h2>
             <ul>
               <li>
-                <h3><a href="http://venz.io">WebGL Research</a></h3>
-                <p>I'm currently working on a <a href="http://venz.io">3d multiplayer game</a> for the browser using WebGL, Node.JS, and Socket.IO. At this point, the main purpose of the project is to see if a MMO game is even plausible in the browser with current tech.</p>
-                <a href="http://venz.io"><img src="/img/venzio.png" alt="venzio" /></a>
+                <h3><a target="_blank" href="http://venz.io">WebGL Research</a></h3>
+                <p>I'm currently working on a <a target="_blank" href="http://venz.io">3d multiplayer game</a> for the browser using WebGL, Node.JS, and Socket.IO. At this point, the main purpose of the project is to see if a MMO game is even plausible in the browser with current tech.</p>
+                <a target="_blank" href="http://venz.io"><img src="/img/venzio.png" alt="venzio" /></a>
               </li>
               <li>
-                <h3><a href="http://tungstenproperty.com">Tungsten Property</a></h3>
-                <p>I developed and launched Tungsten Property's <a href="http://www.tungstenproperty.com">website</a> using LAMP on EC2. I still maintain the site.</p>
-                <a href="http://www.tungstenproperty.com"><img src="/img/tungsten.png" alt="tungsten" /></a>
+                <h3><a target="_blank" href="http://tungstenproperty.com">Tungsten Property</a></h3>
+                <p>I developed and launched Tungsten Property's <a target="_blank" href="http://www.tungstenproperty.com">website</a> using LAMP on EC2. I still maintain the site.</p>
+                <a target="_blank" href="http://www.tungstenproperty.com"><img src="/img/tungsten.png" alt="tungsten" /></a>
               </li>
               <li>
-                <h3><a href="http://trigrid.rasmuzen.com">Tri Grid Viewer</a></h3>
+                <h3><a target="_blank" href="http://trigrid.rasmuzen.com">Tri Grid Viewer</a></h3>
                 <p>This project is super small, but was a really fun take-home interview assignment! As you can see from the image below, I can easily enjoy blowing a lot of time using this app.</p>
-                <a href="http://trigrid.rasmuzen.com"><img src="/img/trigrid.png" alt="trigrid" /></a>
+                <a target="_blank" href="http://trigrid.rasmuzen.com"><img src="/img/trigrid.png" alt="trigrid" /></a>
               </li>
               <li>
-                <h3><a href="/">Rasmuzen</a></h3>
+                <h3><a target="_blank" href="/">Rasmuzen</a></h3>
                 <p>I built and maintain this site and am planning on making it prettier and writing a blog someday.</p>
               </li>
             </ul>
           </div>
-        </div>
