update blog title

--- a/roots/www/root/bitstamp.html
+++ b/roots/www/root/bitstamp.html
@@ -1,5 +1,5 @@
 <div>
-<h2>A suggestion for Bitstamp, bitcoin's biggest exchange</h2>
+<h2>Bitstamp, give me access to my money</h2>
 <p id="blog_date">April 4th, 2014</p>
 <p id="blog_note">Note: This isn’t something you should panic over. It isn’t a sign that Bitstamp is insolvent or anything like that. They just messed up today and need to realize that and fix it because <a href="http://bitcoincharts.com/charts/volumepie/" target="_blank">they're the biggest bitcoin exchange in the world</a> and with great power comes great responsibility.</p>
 <p>Enough Voltaire quotes. Today, I woke up to the following message from Bitstamp:</p>
