--- a/roots/www/root/index.html
+++ b/roots/www/root/index.html
@@ -4,7 +4,7 @@
               <li>I'm currently working full time at Facebook as a Software Engineer on iOS Product Infrastructure</li>
               <li>Before FB, I was hacking on a <a target="_blank" href="http://venz.io">3d multiplayer game</a> for the browser</li>
               <li>I studied Software Engineering at the University of Waterloo for ~4 years, did not complete my degree, and do not intend on doing so</li>
-              <li>I've lived (and worked) in San Diego CA, Mountain View CA, Seattle WA, New York NY, Waterloo ON, and London ON</li>
+              <li>I've lived and worked in San Diego CA, Mountain View CA, Seattle WA, New York NY, Waterloo ON, and London ON</li>
             </ul>
           </div>
           <div id="work-experience">
