--- a/root/index.html
+++ b/root/index.html
@@ -24,8 +24,8 @@
 						<a class="email" href="mailto:andrew@productpains.com">andrew@a13n.com</a>
 					</div>
 					<p>Hi, thanks for stopping by!</p>
-					<p>I studied Software Engineering at the University of Waterloo. I dropped out a year early to work on a 3D WebGL game project, <a href="http://venz.io/demo">Venzio</a>, with <a href="https://www.linkedin.com/pub/borian-tchernev/89/b71/4a9">Borian Tchernev</a>.
-					<p>I then joined Facebook to find more meaningful work. I worked on <a href="https://facebook.github.io/react-native/">React Native</a> for a year and a half and then recently left to work on <a href="http://productpains.com">Product Pains</a>, a project I started with <a href="http://sarahhum.com">Sarah Hum</a>.</p>
+					<p>I studied Software Engineering at the University of Waterloo. I dropped out a year early to work on a 3D WebGL game project, <a href="http://venz.io/demo" target="_blank">Venzio</a>, with <a href="https://www.linkedin.com/pub/borian-tchernev/89/b71/4a9" target="_blank">Borian Tchernev</a>.
+					<p>I then joined Facebook to find more meaningful work. I worked on <a href="https://facebook.github.io/react-native/" target="_blank">React Native</a> for a year and a half and then recently left to work on <a href="http://productpains.com" target="_blank">Product Pains</a>, a project I started with <a href="http://sarahhum.com" target="_blank">Sarah Hum</a>.</p>
 					<ul id="social">
 						<li>
 							<a href="https://www.facebook.com/raz" target="_blank">
