--- a/root/index.html
+++ b/root/index.html
@@ -43,7 +43,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://twitter.com/rasmuzen" target="_blank">
+							<a href="https://twitter.com/a13n" target="_blank">
 								<span data-icon="d" class="icon"></span>
 							</a>
 						</li>
