httpsify the urls

--- a/root/index.html
+++ b/root/index.html
@@ -24,8 +24,8 @@
 						<a class="email" href="mailto:andrew@productpains.com">andrew@a13n.com</a>
 					</div>
 					<p>Hi, thanks for stopping by!</p>
-					<p>I studied Software Engineering at the University of Waterloo. I dropped out a year early to work on a 3D WebGL game project, <a href="http://venz.io/demo" target="_blank">Venzio</a>, with <a href="https://www.linkedin.com/pub/borian-tchernev/89/b71/4a9" target="_blank">Borian Tchernev</a>.
-					<p>I then joined Facebook to find more meaningful work. I worked on <a href="https://facebook.github.io/react-native/" target="_blank">React Native</a> for a year and a half and then recently left to work on <a href="http://productpains.com" target="_blank">Product Pains</a>, a project I started with <a href="http://sarahhum.com" target="_blank">Sarah Hum</a>.</p>
+					<p>I studied Software Engineering at the University of Waterloo. I dropped out a year early to work on a 3D WebGL game project, <a href="https://venz.io/demo" target="_blank">Venzio</a>, with <a href="https://www.linkedin.com/pub/borian-tchernev/89/b71/4a9" target="_blank">Borian Tchernev</a>.
+					<p>I then joined Facebook to find more meaningful work. I worked on <a href="https://facebook.github.io/react-native/" target="_blank">React Native</a> for a year and a half and then recently left to work on <a href="https://productpains.com" target="_blank">Product Pains</a>, a project I started with <a href="https://sarahhum.com" target="_blank">Sarah Hum</a>.</p>
 					<ul id="social">
 						<li>
 							<a href="https://www.facebook.com/raz" target="_blank">
@@ -33,7 +33,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="http://stackoverflow.com/users/710360/arasmussen" target="_blank">
+							<a href="https://stackoverflow.com/users/710360/arasmussen" target="_blank">
 								<span data-icon="b" class="icon"></span>
 							</a>
 						</li>
@@ -60,7 +60,7 @@
 				<article>
 					<img class="project-logo" src="img/product-pains-logo.svg" alt="" />
 					<p>I'm currently working on Product Pains, a community for product designers that is dedicated to improving products through high quality feedback.</p>
-					<a href="http://productpains.com" class="button" target="_blank">Check it out</a>
+					<a href="https://productpains.com" class="button" target="_blank">Check it out</a>
 				</article>
 			</section>
 
@@ -76,7 +76,7 @@
 				<article>
 					<img class="project-logo" src="img/venzio-logo.svg" alt="">
 					<p>I wrote a cool interactive 3d game for the browser using WebGL, Node.JS, and Socket.IO.</p>
-					<a href="http://www.venz.io/demo" class="button" target="_blank">Check it out</a>
+					<a href="https://www.venz.io/demo" class="button" target="_blank">Check it out</a>
 				</article>
 			</section>
 
